fix stack trace wrapping

--- a/packages/web-awesome/src/components/TestResult/TrError/styles.scss
+++ b/packages/web-awesome/src/components/TestResult/TrError/styles.scss
@@ -4,6 +4,7 @@
   border-radius: 8px;
   position: relative;
   overflow: hidden;
+  min-width: 0;
 
   &:before {
     content: "";
@@ -86,9 +87,12 @@
 .test-result-error-trace {
   margin-top: 8px;
   padding-left: 8px;
+  min-width: 0;
 
   pre {
-    overflow: scroll;
+    white-space: pre-wrap;
+    overflow-wrap: anywhere;
+    overflow: auto;
     padding-bottom: 24px;
   }
 }
