--- a/packages/web-awesome/src/components/TestResult/TrSteps/styles.scss
+++ b/packages/web-awesome/src/components/TestResult/TrSteps/styles.scss
@@ -22,6 +22,7 @@
   padding-left: 24px;
   margin-bottom: 12px;
   border-top: 1px solid var(--on-border-muted);
+  min-width: 0;
 }
 
 .test-result-error-step-content {
